Nursery page desktop & header spacing fix

--- a/src/components/services/Hero/Hero.module.scss
+++ b/src/components/services/Hero/Hero.module.scss
@@ -17,6 +17,7 @@
   .tags {
     display: flex;
     gap: 16px;
+    flex-wrap: wrap;
 
     & > div {
       display: flex;
