--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -58,7 +58,7 @@ section {
 
 main {
   &:not(.home) {
-    margin-top: 96px;
+    margin-top: 80px;
   }
 }
 
